--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "backend": "file:",
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1"
