--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 DB_URI=mongodb://localhost:27017/techzy
 PORT=5000
+JWT_SECRET="TechzyY2025"
+JWT_EXPIRES= "30d"
+ADMIN_EMAIL= "admint@gmail.com"
+ADMIN_PASSWORD= "admin12345"
