--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.2",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.5.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "vite-project": "file:"
   },
   "devDependencies": {
@@ -31,7 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.2",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
