--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.2",
-    "framer-motion": "^12.6.3",
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.10.5",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
