--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "vite-project": "file:"
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
