--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,11 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "7.56.4",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "vite-project": "file:"
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
