--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_URI=mongodb://localhost:27017/techzy
-PORT=5000
+DB_URI="mongodb://localhost:27017/techzy"
+PORT="5000"
 JWT_SECRET="TechzyY2025"
 JWT_EXPIRES= "30d"
 ADMIN_EMAIL= "admint@gmail.com"
