--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_URI="mongodb://localhost:27017/techzy"
+DB_URI="mongodb+srv://angelmccf096:xeQmPoTSI3YQstzf@cluster1b.yovfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1B"
 PORT="5000"
 JWT_SECRET="TechzyY2025"
 JWT_EXPIRES= "30d"
