--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
+    "sweetalert2": "11.22.0",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
